Fixed title/content overflow issue
refs https://github.com/TryGhost/Team/issues/3258

--- a/assets/css/blog/featured.css
+++ b/assets/css/blog/featured.css
@@ -12,6 +12,7 @@
     font-weight: 700;
     line-height: 1.3;
     letter-spacing: -0.01em;
+    word-break: break-word;
 }
 
 .has-serif-title .featured-wrapper .post-title {
